src/test/deca/syntax/valid/synt/simple_class_extends.deca
/*
    Description : classe qui étends Object

    Résultat : OK
*/
class A extends Object{}
