src/test/deca/syntax/invalid/synt/class_this.deca
/*
    Description : Classe nommée this

    Résultat : Erreur syntaxique
*/
class this{}
